--- a/src/Components/Body.css
+++ b/src/Components/Body.css
@@ -4,6 +4,67 @@
     display: flex;
 }
 
+.navbar {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    padding: 0;
+    margin: 0;
+    font-size: 25px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.nav-menu {
+    background-color: #202526;
+    width: 75vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: 850ms;
+}
+.add-menu{
+    /* background-color: #202526; */
+    height: 100%;
+    max-height: 80vh;
+    overflow-y: auto;
+    width: 70vw;
+    /* flex-grow: 1; */
+}
+
+.nav-menu.active {
+    left: 0;
+    transition: 350ms;
+}
+
+.nav-text {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 8px 0px 8px 16px;
+    list-style: none;
+    height: 60px;
+}
+
+.nav-menu-items {
+    width: 100%;
+}
+
+.navbar-toggle {
+    background-color: #202526;
+    max-width: 60vw;
+    /* height: 80px; */
+    /* padding-left: 16px; */
+    font-size: 30px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
 .addBtn{
     background-color: #e6b400;
     border: 1px solid black;
@@ -47,6 +108,23 @@ hr {
 }
 
 .noteDesc{
-    /* flex-grow: 3; */
     width: 65vw;
+}
+
+@media screen and (min-width: 900px) {
+    .navbar {
+        display: none;
+    }
+}
+@media screen and (max-width: 900px) {
+    .add{
+        display: none;
+    }
+    .noteDesc{
+        width: 100vw;
+    }
+    .addBtn{
+        right: 12px;
+        left: auto;
+    }
 }
