--- a/src/Components/BriefNote.css
+++ b/src/Components/BriefNote.css
@@ -2,8 +2,8 @@
     display: flex;
     /* flex-direction: column; */
     color: white;
-    padding: 10px 18px;
-    margin: 10px 40px;
+    padding: 20px 18px;
+    /* margin: 10px 40px; */
 }
 .notes-text{
     flex-grow: 1;
